--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
 		"difflib": "npm:@ewoudenberg/difflib@0.1.0",
 		"discord.js": "14.11.0",
 		"dotenv": "16.1.4",
-		"fast-fuzzy": "1.12.0",
 		"json-diff": "1.0.6",
+		"match-sorter": "6.3.1",
 		"mime-types": "2.1.35",
 		"papaparse": "5.3.2",
 		"serialize-error": "11.0.0"
