--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
 	"dependencies": {
 		"@napi-rs/canvas": "0.1.41",
 		"async-exit-hook": "2.0.1",
+		"chart.js": "4.3.0",
+		"chartjs-adapter-date-fns": "3.0.0",
+		"date-fns": "2.30.0",
 		"difflib": "npm:@ewoudenberg/difflib@0.1.0",
 		"discord.js": "14.11.0",
 		"dotenv": "16.1.4",
