--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"match-sorter": "6.3.1",
 		"mime-types": "2.1.35",
 		"papaparse": "5.3.2",
-		"serialize-error": "11.0.0"
+		"serialize-error": "11.0.0",
+		"strife.js": "1.0.4"
 	},
 	"devDependencies": {
 		"@redguy12/prettier-config": "2.0.2",
