Only run lint on main

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,6 +1,7 @@
 name: Lint
 on:
     push:
+        branches: main
     workflow_dispatch:
     schedule:
         - cron: 30 12 * * * # 30 minutes before Dependabot
