--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"prettier": "@redguy12/prettier-config",
 	"dependencies": {
 		"@napi-rs/canvas": "0.1.41",
+		"@twemoji/parser": "14.1.0",
 		"async-exit-hook": "2.0.1",
 		"chart.js": "4.3.1",
 		"chartjs-adapter-date-fns": "3.0.0",
