--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,33 @@
 {
 	"compilerOptions": {
 		"allowJs": true,
-		"alwaysStrict": true,
-		"baseUrl": ".",
+		"baseUrl": "./",
 		"checkJs": true,
+		"allowUnreachableCode": false,
+		"allowUnusedLabels": false,
 		"esModuleInterop": true,
-		"exactOptionalPropertyTypes": false,
+		"experimentalDecorators": true,
 		"forceConsistentCasingInFileNames": true,
-		"verbatimModuleSyntax": true,
+		"isolatedModules": true,
+		"jsx": "preserve",
 		"lib": ["ESNext", "DOM"],
 		"maxNodeModuleJsDepth": 0,
 		"module": "ESNext",
 		"moduleResolution": "Node16",
 		"noEmitOnError": true,
 		"noErrorTruncation": true,
-		"noImplicitAny": true,
 		"noImplicitOverride": true,
-		"noImplicitThis": true,
 		"noUncheckedIndexedAccess": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"outDir": "dist",
+		"removeComments": true,
 		"resolveJsonModule": true,
-		"skipLibCheck": false,
+		"sourceMap": true,
 		"strict": true,
 		"stripInternal": true,
 		"target": "ES2021",
-		"useDefineForClassFields": true,
-		"useUnknownInCatchVariables": false
+		"verbatimModuleSyntax": true
 	},
 	"exclude": ["node_modules", ".git", "dist"],
 	"typeAcquisition": { "enable": true }
