--- a/package.json
+++ b/package.json
@@ -34,9 +34,13 @@
 		"@types/async-exit-hook": "<=2.0.1",
 		"@types/chrome": "latest",
 		"@types/difflib": "0.2.1",
+		"@types/eslint": "^8.44.2",
 		"@types/json-diff": "<=1.0.6",
 		"@types/node": "<=18.12.1",
 		"@types/papaparse": "<=5.4.1",
+		"@typescript-eslint/eslint-plugin": "6.3.0",
+		"@typescript-eslint/parser": "6.3.0",
+		"eslint": "8.47.0",
 		"nodemon": "3.0.1",
 		"prettier": "2.8.0",
 		"typescript": "5.1.6"
