--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
 		"target": "ES2021",
 		"verbatimModuleSyntax": true
 	},
-	"exclude": ["node_modules", ".git", "dist"],
+	"exclude": ["node_modules", ".git", "dist", "!.eslintrc.cjs"],
 	"typeAcquisition": { "enable": true }
 }
