add lint to workflow
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"build": "tsc --project tsconfig.json",
 		"dev": "tsc --project tsconfig.json --watch",
 		"format": "prettier --write \"**\" \"!dist/**\" --ignore-unknown",
+		"lint": "eslint .",
 		"serve": "nodemon . --watch dist",
 		"start": "node ."
 	},
