--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -86,6 +86,28 @@ jobs:
             - name: Analyze
               uses: github/codeql-action/analyze@v2
 
+    lint:
+        name: Lint
+        runs-on: ubuntu-20.04
+
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3.5.3
+              with:
+                  ref: ${{ github.head_ref }}
+
+            - name: Setup Node.JS
+              uses: actions/setup-node@v3.7.0
+              with:
+                  node-version: "18.12.1"
+                  cache: npm
+
+            - name: Install
+              run: npm ci
+
+            - name: Lint
+              run: npm run lint
+
     build:
         name: Build
         runs-on: ubuntu-20.04
