use ts's no fallthrough
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
 		"moduleResolution": "Node16",
 		"noEmitOnError": true,
 		"noErrorTruncation": true,
+		"noFallthroughCasesInSwitch":true,
 		"noImplicitOverride": true,
 		"noUncheckedIndexedAccess": true,
 		"noUnusedLocals": true,
