--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
               run: curl ${{ secrets.BAD_WORDS }} --output badWords.ts
 
             - name: Download secrets
-              run: curl ${{ secrets.SECRETS }} --output secrets.ts
+              run: curl ${{ secrets.SECRETS }} --output modules/secrets/secrets.ts
 
             - name: Install
               run: npm ci --force
