--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
                   cache: npm
 
             - name: Download bad words
-              run: curl ${{ secrets.BAD_WORDS }} --output badWords.ts
+              run: curl ${{ secrets.BAD_WORDS }} --output modules/automod/badWords.ts
 
             - name: Download secrets
               run: curl ${{ secrets.SECRETS }} --output modules/secrets/secrets.ts
