--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@typescript-eslint/eslint-plugin": "6.4.0",
 		"@typescript-eslint/parser": "6.4.0",
 		"eslint": "8.47.0",
+		"eslint-plugin-unicorn": "48.0.1",
 		"nodemon": "3.0.1",
 		"prettier": "2.8.0",
 		"typescript": "5.1.6"
