Add strict & typechecked ts-eslint rules
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
 		"target": "ES2021",
 		"verbatimModuleSyntax": true
 	},
-	"exclude": ["node_modules", ".git", "dist", "!.eslintrc.cjs"],
+	"exclude": ["node_modules", ".git", "dist"],
 	"typeAcquisition": { "enable": true }
 }
