--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,6 +2,7 @@ name: Lint
 on:
     push:
     workflow_dispatch:
+    pull_request_target:
     schedule:
         - cron: 00 12 * * * # 1 hour before Dependabot
 
@@ -10,7 +11,7 @@ permissions: write-all
 jobs:
     bump:
         name: Bump dependencies
-        if: github.ref_name == 'main' && github.repository_owner == 'scratchadons-community'
+        if: github.ref_name == 'main' && github.repository_owner == 'scratchaddons-community'
         runs-on: ubuntu-20.04
 
         steps:
@@ -40,7 +41,7 @@ jobs:
 
     format:
         name: Format
-        if: ${{ always() }} startsWith(github.ref_name, 'dependabot/') != true
+        if: ${{ always() }} && startsWith(github.ref_name, 'dependabot/') != true
         runs-on: ubuntu-20.04
         needs: bump
 
