fix module tsconfig options
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,7 @@
 		"jsx": "preserve",
 		"lib": ["ESNext", "DOM"],
 		"maxNodeModuleJsDepth": 0,
-		"module": "ESNext",
-		"moduleResolution": "Node16",
+		"module": "NodeNext",
 		"noEmitOnError": true,
 		"noErrorTruncation": true,
 		"noFallthroughCasesInSwitch": true,
