--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"match-sorter": "6.3.1",
 		"papaparse": "5.4.1",
 		"serialize-error": "11.0.1",
-		"strife.js": "1.0.6"
+		"strife.js": "^1.0.6",
+		"undici": "^5.23.0"
 	},
 	"devDependencies": {
 		"@redguy12/prettier-config": "2.0.2",
