--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 		"dev": "tsc --project tsconfig.json --watch",
 		"format": "prettier --write \"**\" \"!dist/**\" --ignore-unknown",
 		"lint": "eslint .",
-		"serve": "nodemon . --watch dist",
-		"start": "node ."
+		"serve": "nodemon --enable-source-maps . --watch dist",
+		"start": "node --enable-source-maps ."
 	},
 	"prettier": "@redguy12/prettier-config",
 	"dependencies": {
