--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -130,3 +130,25 @@ jobs:
 
             - name: Build
               run: npm run build
+
+    test:
+        name: Test
+        runs-on: ubuntu-20.04
+
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4.0.0
+              with:
+                  ref: ${{ github.head_ref }}
+
+            - name: Setup Node.JS
+              uses: actions/setup-node@v3.8.1
+              with:
+                  node-version: "18.12.1"
+                  cache: npm
+
+            - name: Install
+              run: npm ci
+
+            - name: Test
+              run: npm run test
