update node&npm reqs
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
 		"@railway/cli": "3.4.0"
 	},
 	"engines": {
-		"node": "^18.11.1",
-		"npm": "^8.0.0"
+		"node": ">=18.11.1",
+		"npm": ">=8.0.0"
 	},
 	"overrides": {
 		"@discordjs/builders": "dev",
