--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,15 +11,12 @@ permissions: write-all
 jobs:
     bump:
         name: Bump dependencies
-        if: ${{ github.head_ref || github.ref_name }} == 'main' && github.event.pull_request.head.repo.full_name == 'scratchaddons-community'
+        if: github.event_name != 'pull_request_target' && github.ref_name == 'main' && github.repository_owner == 'scratchaddons-community'
         runs-on: ubuntu-20.04
 
         steps:
             - name: Checkout
               uses: actions/checkout@v4.0.0
-              with:
-                  ref: ${{ github.head_ref }}
-                  repository: ${{ github.event.pull_request.head.repo.full_name }}
 
             - name: Bump
               id: sync_types
