change times for bump again and maybe fix dads on some devices
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -2,7 +2,7 @@ name: Bump dependencies
 on:
     workflow_dispatch:
     schedule:
-        - cron: 00 11 * * * # 1 hour before Dependabot
+        - cron: 00 12 * * * # 30 min before Dependabot
 
 permissions: write-all
 
