add a wholeass html parser lmao - fix modlogs - make it a tad longer - strip # and ? - support #post- fragments - linkify mentions - html to md I DID IT
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"json-diff": "1.0.6",
 		"match-sorter": "6.3.1",
 		"papaparse": "5.4.1",
+		"posthtml-parser": "^0.11.0",
 		"serialize-error": "11.0.2",
 		"strife.js": "3.0.1"
 	},
