--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"lint": "eslint .",
 		"serve": "nodemon --enable-source-maps . --watch dist",
 		"start": "node --enable-source-maps .",
-		"test": "npm run build; node --test"
+		"test": "npm run build && node --test"
 	},
 	"prettier": "@redguy12/prettier-config",
 	"dependencies": {
