Add ScratchAddons/ScratchAddons as a submodule Previously, we fetched the extension and addon manifests at runtime. This led to occasional ratelimits, especially in development. Having Git manage it instead is much a better solution. This also means that development Scradd will no longer use development SA, but updates to the SA version can now be reflected in the changelog. Also, we no longer depend on `@types/chrome` for typing manifest.json and can instead use more accurate types taken directly from the JSON.
Some other *slightly* related changes in this commit:
- Remove unused config options
- Sort the config & constants
- Move the inviteUrl to package.json
- Move welcome emojis to constants.emojis.welcome
- Destructure package.json import
- Read process.env.CANVAS directly
- Enable ESLint reportUnusedDisableDirectives and root
- Sort tsconfig.json
- Fix Bump workflow

Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -14,10 +14,18 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4.1.0
+              with:
+                  submodules: true
 
             - name: Bump
               id: sync_types
               uses: RedGuy12/sync-types@v1.2.16
+
+            - name: Setup Node.JS
+              uses: actions/setup-node@v3.8.1
+              with:
+                  node-version: "20.6.0"
+                  cache: npm
 
             - name: Install
               run: npm ci
