--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4.1.0
               with:
+                  submodules: true
                   ref: ${{ github.head_ref }}
 
             - name: Setup Node.JS
