--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"build": "tsc --project tsconfig.json",
 		"dev": "tsc --project tsconfig.json --watch",
-		"format": "prettier --write \"**\" \"!dist/**\" \"!extension/**\" --ignore-unknown",
+		"format": "prettier --write \"**\" \"!dist/**\" --ignore-unknown",
 		"lint": "eslint .",
 		"serve": "nodemon --env-file=.env --enable-source-maps . --watch dist",
 		"start": "node --env-file=.env --enable-source-maps .",
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"@fontsource-variable/sora": "5.0.8",
 		"@napi-rs/canvas": "0.1.44",
+		"@sa-community/addons-data": "1.34.1-1",
 		"@twemoji/parser": "14.1.0",
 		"async-exit-hook": "2.0.1",
 		"chart.js": "4.4.0",
