--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "scradd",
 	"version": "2.9.4",
 	"private": true,
+	"homepage": "https://discord.gg/FPv957V6SD",
 	"type": "module",
 	"main": "dist/index.js",
 	"scripts": {
@@ -17,6 +18,7 @@
 	"dependencies": {
 		"@fontsource-variable/sora": "5.0.8",
 		"@napi-rs/canvas": "0.1.44",
+		"@sa-community/addons-data": "1.34.1-3",
 		"@twemoji/parser": "14.1.0",
 		"async-exit-hook": "2.0.1",
 		"chart.js": "4.4.0",
@@ -33,7 +35,6 @@
 	"devDependencies": {
 		"@redguy12/prettier-config": "2.0.2",
 		"@types/async-exit-hook": "<=2.0.1",
-		"@types/chrome": "latest",
 		"@types/difflib": "0.2.1",
 		"@types/eslint": "<=8.49.0",
 		"@types/json-diff": "<=1.0.6",
