--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -29,7 +29,7 @@ jobs:
               run: npm ci
 
             - name: Check format
-              run: npm run format
+              run: npx prettier --check "**" "!dist/**" --ignore-unknown
 
             - name: Lint
               run: npm run lint
