--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"json-diff": "1.0.6",
 		"match-sorter": "6.3.1",
 		"mongoose": "7.5.4",
+		"mustache": "4.2.0",
 		"papaparse": "5.4.1",
 		"posthtml-parser": "^0.11.0",
 		"serialize-error": "11.0.2",
@@ -44,6 +45,7 @@
 		"@types/difflib": "0.2.1",
 		"@types/eslint": "<=8.50.0",
 		"@types/json-diff": "<=1.0.6",
+		"@types/mustache": "4.2.4",
 		"@types/node": "<=20.6.0",
 		"@types/papaparse": "<=5.4.1",
 		"@typescript-eslint/eslint-plugin": "6.7.4",
