--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
 		"start": "node --env-file=.env --enable-source-maps .",
 		"test": "npm run build && node --test"
 	},
+	"browserslist": [
+		"chrome 80",
+		"edge 80",
+		"opera 67",
+		"ff 86"
+	],
 	"prettier": "@redguy12/prettier-config",
 	"dependencies": {
 		"@fontsource-variable/sora": "5.0.14",
@@ -28,6 +34,7 @@
 		"json-diff": "1.0.6",
 		"match-sorter": "6.3.1",
 		"mongoose": "7.6.3",
+		"mustache": "4.2.0",
 		"papaparse": "5.4.1",
 		"posthtml-parser": "^0.11.0",
 		"serialize-error": "11.0.2",
@@ -38,6 +45,7 @@
 		"@types/difflib": "0.2.1",
 		"@types/eslint": "<=8.51.0",
 		"@types/json-diff": "<=1.0.6",
+		"@types/mustache": "4.2.4",
 		"@types/node": "<=20.6.0",
 		"@types/papaparse": "<=5.4.1",
 		"@typescript-eslint/eslint-plugin": "6.8.0",
