--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	"dependencies": {
 		"@fontsource-variable/sora": "5.0.15",
 		"@napi-rs/canvas": "0.1.44",
-		"@sa-community/addons-data": "1.35.1",
+		"@sa-community/addons-data": "1.35.1-1",
 		"@twemoji/parser": "14.1.0",
 		"chart.js": "4.4.0",
 		"chartjs-adapter-date-fns": "3.0.0",
