--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -105,6 +105,7 @@ jobs:
     test:
         name: Test
         runs-on: ubuntu-20.04
+        needs: build
 
         steps:
             - name: Checkout
