--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"chart.js": "4.4.1",
 		"chartjs-adapter-date-fns": "3.0.0",
 		"date-fns": "2.30.0",
+		"didyoumean2": "6.0.1",
 		"difflib": "npm:@ewoudenberg/difflib@0.1.0",
 		"discord.js": "dev",
 		"match-sorter": "6.3.1",
