Enable `@typescript-eslint:all` and fix reported errors - use 1 `AggregateError` instead of 3 errors in database error handling - rename `/memory-match`'s `user` option to `opponent` - fix potential missing event location change logs - bump Node.JS version and referenced ESVersions - use `Array#toSorted` instead of `Array#sort` - correct `process.env.CANVAS` docs - clean up `messageToText` and bump referenced discord.py commit - clean up `appealRequest` a bit - rewrite `lerpColors` to have less duplicated code - remove digits from identifiers - add a few `TODO` comments - use `Awaitable` where possible - typecheck `.eslintrc.cjs` - define Mongoose models and schemas together - disable `unicorn/no-null` - disable `unicorn/prevent-abbreviations`'s `checkProperties` option - add some future ESLint rules and comments
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
-		"lib": ["ESNext", "DOM"],
-		"maxNodeModuleJsDepth": 0,
+		"lib": ["es2023"],
 		"module": "NodeNext",
 		"noEmitOnError": true,
 		"noErrorTruncation": true,
@@ -26,9 +25,11 @@
 		"sourceMap": true,
 		"strict": true,
 		"stripInternal": true,
-		"target": "ES2021",
-		"verbatimModuleSyntax": true
+		"target": "es2022",
+		"verbatimModuleSyntax": true,
+		"types": ["node"]
 	},
 	"exclude": ["node_modules", ".git", "dist"],
-	"typeAcquisition": { "enable": true }
+	"typeAcquisition": { "enable": true },
+	"include": ["**/*", ".**/*", ".*"]
 }
