dev(deploy): Start migrating CI to fly.io
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,15 +30,15 @@ jobs:
             - name: Install
               run: npm ci --force
 
-            - name: Link
-              run: npx railway link --environment production b8b10332-30c2-4b72-8999-78c69ddcd63a
-              env:
-                  RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+            # - name: Link
+            #   run: npx railway link --environment production b8b10332-30c2-4b72-8999-78c69ddcd63a
+            #   env:
+            #       RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
-            - name: Deploy
-              run: npx railway up --detach
-              env:
-                  RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+            # - name: Deploy
+            #   run: npx railway up --detach
+            #   env:
+            #       RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
             - name: Clean DB listeners
               run:
