--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
 	},
 	"devDependencies": {
 		"@redguy12/prettier-config": "2.0.2",
-		"@types/difflib": "0.2.1",
+		"@types/difflib": "<=0.2",
 		"@types/eslint": "<=8.56",
 		"@types/mustache": "<=4.2",
 		"@types/node": "<=20.10",
