--- a/fly.toml
+++ b/fly.toml
@@ -1,12 +1,13 @@
-# fly.toml app configuration file generated for scradd-weathered-sunset-3636 on 2023-12-24T18:29:00-06:00
+# fly.toml app configuration file generated for scrub on 2024-01-07T22:16:50-05:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "scradd-weathered-sunset-3636"
+app = "scrub"
 primary_region = "iad"
-kill_timeout = 60
+kill_timeout = "1m0s"
 
+[build]
 
 [http_service]
   internal_port = 3000
@@ -19,4 +20,4 @@ kill_timeout = 60
 [[vm]]
   cpu_kind = "shared"
   cpus = 1
-  memory_mb = 256
+  memory_mb = 1024
