add back codeql and other stuff

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,6 +36,49 @@ jobs:
               with:
                   commit_message: Format
 
+    analyze:
+        name: Analyze
+        runs-on: ubuntu-20.04
+
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4.1.1
+              with:
+                  ref: ${{ github.head_ref }}
+                  repository: ${{ github.event.pull_request.head.repo.full_name }}
+
+            - name: Setup CodeQL
+              uses: github/codeql-action/init@v3.23.0
+              with:
+                  languages: javascript
+                  queries: security-and-quality
+
+            - name: Analyze
+              uses: github/codeql-action/analyze@v3.23.0
+
+    build:
+        name: Build & Test
+        runs-on: ubuntu-20.04
+
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4.1.1
+              with:
+                  ref: ${{ github.head_ref }}
+                  repository: ${{ github.event.pull_request.head.repo.full_name }}
+
+            - name: Setup Node.JS
+              uses: actions/setup-node@v4.0.1
+              with:
+                  node-version: "20.6.0"
+                  cache: npm
+
+            - name: Install
+              run: npm ci
+
+            - name: Build & Test
+              run: npm run test
+
     lint:
         name: Lint
         runs-on: ubuntu-20.04
@@ -58,50 +101,3 @@ jobs:
 
             - name: Lint
               run: npm run lint
-
-    build:
-        name: Build
-        runs-on: ubuntu-20.04
-
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4.1.1
-              with:
-                  ref: ${{ github.head_ref }}
-                  repository: ${{ github.event.pull_request.head.repo.full_name }}
-
-            - name: Setup Node.JS
-              uses: actions/setup-node@v4.0.1
-              with:
-                  node-version: "20.6.0"
-                  cache: npm
-
-            - name: Install
-              run: npm ci
-
-            - name: Build
-              run: npm run build
-
-    test:
-        name: Test
-        runs-on: ubuntu-20.04
-        needs: build
-
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4.1.1
-              with:
-                  ref: ${{ github.head_ref }}
-                  repository: ${{ github.event.pull_request.head.repo.full_name }}
-
-            - name: Setup Node.JS
-              uses: actions/setup-node@v4.0.1
-              with:
-                  node-version: "20.6.0"
-                  cache: npm
-
-            - name: Install
-              run: npm ci
-
-            - name: Test
-              run: npm run test
