--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 		"posthtml-parser": "0.12.0",
 		"serialize-error": "11.0.3",
 		"strife.js": "4.0.1",
-		"tesseract.js": "^5.0.5"
+		"tesseract.js": "5.0.5"
 	},
 	"devDependencies": {
 		"@redguy12/prettier-config": "2.0.2",
