use didYouMean instead of stringSimilarity

--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
 		"papaparse": "5.4.1",
 		"posthtml-parser": "0.12.0",
 		"serialize-error": "11.0.3",
-		"strife.js": "4.0.1",
-		"string-similarity-js": "2.1.4"
+		"strife.js": "4.0.1"
 	},
 	"devDependencies": {
 		"@redguy12/prettier-config": "2.0.2",
