--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
 		"forceConsistentCasingInFileNames": true,
+		"incremental": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
 		"lib": ["es2023"],
@@ -25,8 +26,8 @@
 		"strict": true,
 		"stripInternal": true,
 		"target": "es2022",
-		"verbatimModuleSyntax": true,
-		"types": ["node"]
+		"types": ["node"],
+		"verbatimModuleSyntax": true
 	},
 	"exclude": ["node_modules", ".git", "dist"],
 	"typeAcquisition": { "enable": true },
