--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"prettier": "@redguy12/prettier-config",
 	"dependencies": {
 		"@fontsource-variable/sora": "5.0.16",
+		"@khanacademy/simple-markdown": "0.11.3",
 		"@napi-rs/canvas": "0.1.50",
 		"@sa-community/addons-data": "1.35.1-1",
 		"@twemoji/parser": "15.0.0",
