dev: Fix simple-markdown types for thrice(?) and for all
Signed-off-by: RedGuy12 <61329810+RedGuy12@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,10 +26,13 @@
 		"strict": true,
 		"stripInternal": true,
 		"target": "es2022",
+		"paths": {
+			"*": ["./common/typedefs/*.d.ts", "./node_modules/@types/*", "./node_modules/*"]
+		},
 		"types": ["node"],
 		"verbatimModuleSyntax": true
 	},
-	"exclude": ["node_modules", ".git", "dist"],
+	"exclude": ["./node_modules", "./.git", "./dist"],
 	"typeAcquisition": { "enable": true },
-	"include": ["**/*", ".**/*", ".*"]
+	"include": ["./**/*", "./.*"]
 }
