--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -19,41 +19,12 @@ jobs:
               id: sync_types
               uses: RedGuy12/sync-types@v2.0.0
 
-            - name: Setup Node.JS
-              uses: actions/setup-node@v4.0.2
-              with:
-                  node-version: "20.6.0"
-                  cache: npm
-
-            - name: Install
-              run: npm ci
-
-            - name: Format
-              run: npm run format
-
-            - name: Lint
-              run: npm run lint
-
-            - name: Attempt build
-              run: npm run build
-
-            - name: Test
-              run: npm run test
-
-            - name: Exit on failure
-              if: failure()
-              run: exit 0
-
             - name: Commit
               id: commit
-              uses: stefanzweifel/git-auto-commit-action@v5.0.0
+              uses: peter-evans/create-pull-request@v6.0.2
               with:
-                  commit_message: Bump dependencies
-
-            - name: Comment
-              if: steps.commit.outputs.changes_detected == 'true'
-              run: |
-                  body="$(cat ${{ steps.sync_types.outputs.output-dir }}/changes.md)$(cat ${{ steps.sync_types.outputs.output-dir }}/sync.md)"
-                  gh api "repos/${{ github.repository }}/commits/${{ steps.commit.outputs.commit_hash }}/comments" -F "body=$body"
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  commit-message: Bump dependencies
+                  branch: ci-bump-dependencies
+                  delete-branch: true
+                  title: Bump dependencies
+                  body-path: ${{ steps.sync_types.outputs.output-dir }}/output.md
